--- a/aboutus.html
+++ b/aboutus.html
@@ -97,11 +97,11 @@
     <div id="root"></div>
     <script type="text/babel">
       const teamMembers = [
-        { id: 1, name: "Mark Zuckerberg", position: "CEO", expertise: "Visionary leadership and AI innovation", image: "https://i.pinimg.com/736x/ba/d9/88/bad98876a2009d20e2c3ece35d293c7c.jpg", department: "Executive", facebook: "https://www.facebook.com/zuck" },
-        { id: 2, name: "Andrew Bosworth", position: "CTO", expertise: "Augmented reality and technology strategy", image: "https://via.placeholder.com/300x300?text=Andrew", department: "Technology", facebook: "https://www.facebook.com/boz" },
-        { id: 3, name: "Sheryl Sandberg", position: "Former COO", expertise: "Business operations and growth strategy", image: "https://via.placeholder.com/300x300?text=Sheryl", department: "Operations", facebook: "https://www.facebook.com/sheryl" },
-        { id: 4, name: "Javier Olivan", position: "COO", expertise: "Global operations and user engagement", image: "https://via.placeholder.com/300x300?text=Javier", department: "Operations", facebook: "https://www.facebook.com/" },
-        { id: 5, name: "Susan Li", position: "CFO", expertise: "Financial strategy and corporate governance", image: "https://via.placeholder.com/300x300?text=Susan", department: "Finance", facebook: "https://www.facebook.com/" },
+        { id: 1, name: "LIM SEYHA", position: "Lecturer", expertise: "Mathematic Lecturer and Our mentor in this project", image: "https://i.pinimg.com/736x/ba/d9/88/bad98876a2009d20e2c3ece35d293c7c.jpg", department: "Executive", facebook: "https://www.facebook.com/zuck" },
+        { id: 2, name: "ROEURM DARA", position: "Member", expertise: "Augmented reality and technology strategy", image: "https://via.placeholder.com/300x300?text=Andrew", department: "Technology", facebook: "https://www.facebook.com/boz" },
+        { id: 3, name: "PECH RATTANAKMONY", position: "Member", expertise: "Business operations and growth strategy", image: "https://via.placeholder.com/300x300?text=Sheryl", department: "Operations", facebook: "https://www.facebook.com/sheryl" },
+        { id: 4, name: "MAI SOKLYNA", position: "Member", expertise: "Global operations and user engagement", image: "https://via.placeholder.com/300x300?text=Javier", department: "Operations", facebook: "https://www.facebook.com/" },
+        { id: 5, name: "PHAT SONGMICHKEL", position: "Member", expertise: "Financial strategy and corporate governance", image: "https://via.placeholder.com/300x300?text=Susan", department: "Finance", facebook: "https://www.facebook.com/" },
       ];
 
       const App = () => {
@@ -121,7 +121,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <div class="flex justify-between items-center h-16">
             <div class="flex items-center">
-              <span class="text-2xl font-['Pacifico'] text-primary">logo</span>
+             <img src="./images/mathlogo.png" alt="Logo" class="h-20 w-auto" />
             </div>
             <div class="flex items-center space-x-4">
               <a
@@ -147,12 +147,12 @@
       </nav>
 
             {/* Header Section */}
-            <div className="bg-gradient-to-br from-blue-50 to-white py-12">
+            <div className="bg-gradient-to-br from-blue-50  py-12">
               <div className="max-w-6xl mx-auto px-4 text-center">
                 <img 
-                  src="https://via.placeholder.com/150x50?text=Meta+Logo" 
+                  src="./images/yyyyyyyyyy.png" 
                   alt="Meta Logo" 
-                  className="mx-auto mb-6 w-32 h-12 object-contain animate__animated animate__fadeIn"
+                  className="mx-auto mb-6 w-40 h-full object-contain animate__animated animate__fadeIn"
                   loading="lazy"
                 />
                 <h1 className="text-4xl md:text-5xl font-bold text-gray-800 mb-4 animate__animated animate__fadeIn">Meet Our Team</h1>
@@ -160,7 +160,7 @@
               </div>
             </div>
 
-          
+        
             {/* Boss Section */}
             <div className="max-w-6xl mx-auto px-4 py-12">
               <div className="flex justify-center mb-12">
@@ -218,11 +218,11 @@
                 ))}
               </div>
             </div>
-            <footer class="bg-gray-50 pt-16 pb-8">
+            <footer class="bg-gray-100 pt-16 pb-8">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <div class="grid md:grid-cols-3 gap-8 mb-12">
             <div>
-              <div class="text-2xl font-['Pacifico'] text-primary mb-4">logo</div>
+               <img src="./images/fe-removebg-preview.png" alt="Logo" class="h-10 w-auto" />
               <p class="text-gray-600 mb-4">
                 A comprehensive platform for exploring discrete mathematics
                 concepts through interactive tools and resources.
