--- a/math.html
+++ b/math.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -74,6 +73,7 @@
         background-color: #3b82f6;
         animation: slideIn 0.3s ease-out;
       }
+
       @keyframes slideIn {
         from {
           transform: scaleX(0);
@@ -106,14 +106,51 @@
           opacity: 1;
         }
       }
+      .accordion {
+        border-radius: 20px;
+      }
+      .accordion-item {
+        border-bottom: 1px solid #ccc;
+      }
+      .accordion-header {
+        background-color: #f2f2f2;
+        cursor: pointer;
+        padding: 15px 20px;
+        font-weight: bold;
+        transition: background-color 0.3s;
+      }
+      .accordion-header:hover {
+        background-color: #ddd;
+      }
+      .accordion-content {
+        max-height: 0;
+        overflow: hidden;
+        padding: 0 20px;
+        background-color: #fafafa;
+        transition: max-height 0.3s ease, padding 0.3s ease;
+      }
+      .accordion-content p {
+        margin: 15px 0;
+      }
+      .accordion-item.active .accordion-content {
+        max-height: 200px; /* adjust as needed */
+        padding: 15px 20px;
+      }
+
+      .accordion-item .accordion-content {
+        transition: all 0.3s ease-in-out;
+      }
+      .accordion-item.active .accordion-content {
+        display: block;
+      }
     </style>
   </head>
-  <body class="min-h-screen bg-gray-50">
+  <body class="min-h-screen bg-gray-100">
     <nav class="bg-white shadow-sm sticky top-0 z-50 w-full">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-16">
           <div class="flex items-center">
-            <span class="text-2xl font-['Pacifico'] text-primary">logo</span>
+            <img src="./images/mathlogo.png" alt="Logo" class="h-20 w-auto" />
           </div>
           <div class="flex items-center space-x-4">
             <a
@@ -137,7 +174,7 @@
         </div>
       </div>
     </nav>
-    <div class="bg-gradient-to-br from-blue-50 to-white py-12">
+    <div class="bg-gradient-to-br from-blue-50 py-12">
       <div class="max-w-6xl mx-auto px-4">
         <div class="text-center">
           <h1 class="text-4xl font-bold text-gray-800 mb-4">
@@ -257,7 +294,6 @@
             ></div>
           </div>
         </div>
-
         <!-- Vigenere Cipher Tab -->
         <div class="tab-content hidden fade-in" id="vigenere-tab">
           <div class="grid md:grid-cols-2 gap-8 fade-in">
@@ -331,9 +367,193 @@
             <p class="text-xl">Playfair cipher coming soon!</p>
           </div>
         </div>
+        <h2 class="text-4xl font-semibold text-gray-800 text-center mb-6 pt-6">
+          Frequently Asked Questions
+        </h2>
+
+        <div class="max-w-6xl mx-auto mt-10 space-y-2">
+          <div class="border rounded-lg overflow-hidden">
+            <button
+              class="w-full px-6 py-4 text-left flex justify-between items-center font-semibold text-lg bg-gray-100 hover:bg-gray-200 transition"
+              onclick="toggleAccordion(this)"
+            >
+              What is a Cipher?
+              <span class="transform transition-transform duration-300"
+                >&#9662;</span
+              >
+            </button>
+            <div
+              class="accordion-content max-h-0 overflow-hidden transition-all duration-300 ease-in-out bg-white px-6"
+            >
+              <p class="py-4 text-gray-700">
+                A cipher is an algorithm for performing encryption or
+                decryption—a series of well-defined steps that can be followed
+                to encrypt or decrypt a message.
+              </p>
+            </div>
+          </div>
+
+          <div class="border rounded-lg overflow-hidden">
+            <button
+              class="w-full px-6 py-4 text-left flex justify-between items-center font-semibold text-lg bg-gray-100 hover:bg-gray-200 transition"
+              onclick="toggleAccordion(this)"
+            >
+              How does the Caesar Cipher work?
+              <span class="transform transition-transform duration-300"
+                >&#9662;</span
+              >
+            </button>
+            <div
+              class="accordion-content max-h-0 overflow-hidden transition-all duration-300 ease-in-out bg-white px-6"
+            >
+              <p class="py-4 text-gray-700">
+                The Caesar cipher shifts each letter in the plaintext by a fixed
+                number of positions down the alphabet. For example, with a shift
+                of 3, A becomes D, B becomes E, and so on.
+              </p>
+            </div>
+          </div>
+
+          <div class="border rounded-lg overflow-hidden">
+            <button
+              class="w-full px-6 py-4 text-left flex justify-between items-center font-semibold text-lg bg-gray-100 hover:bg-gray-200 transition"
+              onclick="toggleAccordion(this)"
+            >
+              What is the Vigenère Cipher?
+              <span class="transform transition-transform duration-300"
+                >&#9662;</span
+              >
+            </button>
+            <div
+              class="accordion-content max-h-0 overflow-hidden transition-all duration-300 ease-in-out bg-white px-6"
+            >
+              <p class="py-4 text-gray-700">
+                The Vigenère cipher uses a keyword to determine the shift for
+                each letter in the message. It is a form of polyalphabetic
+                substitution and is more secure than the Caesar cipher.
+              </p>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
-
+    <footer class="bg-gray-100 pt-16 pb-8">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="grid md:grid-cols-3 gap-8 mb-12">
+          <div>
+             <img src="./images/mathlogo.png" alt="Logo" class="h-20 w-auto" />
+            <p class="text-gray-600 mb-4">
+              A comprehensive platform for exploring discrete mathematics
+              concepts through interactive tools and resources.
+            </p>
+            <div class="flex space-x-4">
+              <a
+                href="#"
+                class="w-8 h-8 flex items-center justify-center text-gray-500 hover:text-primary"
+              >
+                <i class="ri-twitter-x-line"></i>
+              </a>
+              <a
+                href="#"
+                class="w-8 h-8 flex items-center justify-center text-gray-500 hover:text-primary"
+              >
+                <i class="ri-facebook-circle-line"></i>
+              </a>
+              <a
+                href="#"
+                class="w-8 h-8 flex items-center justify-center text-gray-500 hover:text-primary"
+              >
+                <i class="ri-instagram-line"></i>
+              </a>
+              <a
+                href="#"
+                class="w-8 h-8 flex items-center justify-center text-gray-500 hover:text-primary"
+              >
+                <i class="ri-github-line"></i>
+              </a>
+            </div>
+          </div>
+          <div>
+            <h3 class="text-lg font-semibold text-gray-900 mb-4">
+              Quick Links
+            </h3>
+            <ul class="space-y-2">
+              <li>
+                <a
+                  href="#tools"
+                  data-readdy="true"
+                  class="text-gray-600 hover:text-primary"
+                  >Cryptography Tools</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#numbers"
+                  data-readdy="true"
+                  class="text-gray-600 hover:text-primary"
+                  >Number Theory</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.math.uci.edu/~mathcircle/materials/M9L1.pdf"
+                  class="text-gray-600 hover:text-primary"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  Learning Resources
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.edx.org/learn/cryptography"
+                  class="text-gray-600 hover:text-primary"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  Practice Problems
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.math.uci.edu/~mathcircle/materials/M9L1.pdf"
+                  class="text-gray-600 hover:text-primary"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  About Us
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="text-lg font-semibold text-gray-900 mb-4">Contact Us</h3>
+            <ul class="space-y-2">
+              <li class="flex items-start">
+                <i class="ri-mail-line text-primary mt-1 mr-2"></i>
+                <span class="text-gray-600">iroffice(at)rupp.edu.kh</span>
+              </li>
+              <li class="flex items-start">
+                <i class="ri-phone-line text-primary mt-1 mr-2"></i>
+                <span class="text-gray-600">855-23-883-640</span>
+              </li>
+              <li class="flex items-start">
+                <i class="ri-map-pin-line text-primary mt-1 mr-2"></i>
+                <span class="text-gray-600"
+                  >The Royal University of Phnom Penh Russian Federation
+                  Boulevard, Toul Kork, Phnom Penh, Cambodia.</span
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="pt-8 border-t border-gray-200 text-center">
+          <p class="text-gray-500 text-sm">
+            © 2025 Discrete Mathematics Learning Platform. All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         // Tabs logic
@@ -395,7 +615,10 @@
         }
 
         function validateCaesarKey() {
-          if (caesarKeyInput.value.trim() === "" || isNaN(caesarKeyInput.value)) {
+          if (
+            caesarKeyInput.value.trim() === "" ||
+            isNaN(caesarKeyInput.value)
+          ) {
             caesarKeyInput.classList.add("border-red-500");
             caesarKeyError.classList.remove("hidden");
             return false;
@@ -410,13 +633,21 @@
 
         caesarEncryptBtn.addEventListener("click", function () {
           if (!validateCaesarKey()) return;
-          const encrypted = caesarCipher(caesarMessageInput.value, caesarKeyInput.value, false);
+          const encrypted = caesarCipher(
+            caesarMessageInput.value,
+            caesarKeyInput.value,
+            false
+          );
           caesarResultArea.textContent = encrypted;
         });
 
         caesarDecryptBtn.addEventListener("click", function () {
           if (!validateCaesarKey()) return;
-          const decrypted = caesarCipher(caesarMessageInput.value, caesarKeyInput.value, true);
+          const decrypted = caesarCipher(
+            caesarMessageInput.value,
+            caesarKeyInput.value,
+            true
+          );
           caesarResultArea.textContent = decrypted;
         });
 
@@ -429,10 +660,15 @@
         });
 
         // --- Vigenère Cipher Elements ---
-        const vigenereMessageInput = document.getElementById("vigenere-message");
+        const vigenereMessageInput =
+          document.getElementById("vigenere-message");
         const vigenereKeyInput = document.getElementById("vigenere-key");
-        const vigenereEncryptBtn = document.getElementById("vigenere-encrypt-btn");
-        const vigenereDecryptBtn = document.getElementById("vigenere-decrypt-btn");
+        const vigenereEncryptBtn = document.getElementById(
+          "vigenere-encrypt-btn"
+        );
+        const vigenereDecryptBtn = document.getElementById(
+          "vigenere-decrypt-btn"
+        );
         const vigenereClearBtn = document.getElementById("vigenere-clear-btn");
         const vigenereResultArea = document.getElementById("vigenere-result");
         const vigenereKeyError = document.getElementById("vigenere-key-error");
@@ -444,7 +680,8 @@
           if (text.trim() === "") return "";
 
           key = key.toUpperCase().replace(/[^A-Z]/g, "");
-          if (key.length === 0) return "Please enter a valid key (letters only)";
+          if (key.length === 0)
+            return "Please enter a valid key (letters only)";
 
           let result = "";
           let keyIndex = 0;
@@ -458,12 +695,11 @@
               if (decrypt) {
                 // Decryption shifts backwards
                 const shifted =
-                  (charCode - base - keyCharCode + 26) % 26 + base;
+                  ((charCode - base - keyCharCode + 26) % 26) + base;
                 result += String.fromCharCode(shifted);
               } else {
                 // Encryption shifts forwards
-                const shifted =
-                  (charCode - base + keyCharCode) % 26 + base;
+                const shifted = ((charCode - base + keyCharCode) % 26) + base;
                 result += String.fromCharCode(shifted);
               }
               keyIndex++;
@@ -490,13 +726,21 @@
 
         vigenereEncryptBtn.addEventListener("click", function () {
           if (!validateVigenereKey()) return;
-          const encrypted = vigenereCipher(vigenereMessageInput.value, vigenereKeyInput.value, false);
+          const encrypted = vigenereCipher(
+            vigenereMessageInput.value,
+            vigenereKeyInput.value,
+            false
+          );
           vigenereResultArea.textContent = encrypted;
         });
 
         vigenereDecryptBtn.addEventListener("click", function () {
           if (!validateVigenereKey()) return;
-          const decrypted = vigenereCipher(vigenereMessageInput.value, vigenereKeyInput.value, true);
+          const decrypted = vigenereCipher(
+            vigenereMessageInput.value,
+            vigenereKeyInput.value,
+            true
+          );
           vigenereResultArea.textContent = decrypted;
         });
 
@@ -508,6 +752,25 @@
           vigenereKeyError.classList.add("hidden");
         });
       });
+    </script>
+    <script>
+      function toggleAccordion(button) {
+        const content = button.nextElementSibling;
+        const icon = button.querySelector("span");
+
+        if (content.style.maxHeight) {
+          content.style.maxHeight = null;
+          icon.style.transform = "rotate(0deg)";
+        } else {
+          document.querySelectorAll(".accordion-content").forEach((el) => {
+            el.style.maxHeight = null;
+            el.previousElementSibling.querySelector("span").style.transform =
+              "rotate(0deg)";
+          });
+          content.style.maxHeight = content.scrollHeight + "px";
+          icon.style.transform = "rotate(180deg)";
+        }
+      }
     </script>
   </body>
 </html>
