--- a/aboutus.html
+++ b/aboutus.html
@@ -98,7 +98,7 @@
     <script type="text/babel">
       const teamMembers = [
         { id: 1, name: "LIM SEYHA", position: "Lecturer", expertise: "Mathematic Lecturer and Our mentor in this project", image: "https://i.pinimg.com/736x/ba/d9/88/bad98876a2009d20e2c3ece35d293c7c.jpg", department: "Executive", facebook: "https://www.facebook.com/zuck" },
-        { id: 2, name: "ROEURM DARA", position: "Member", expertise: "Augmented reality and technology strategy", image: "https://via.placeholder.com/300x300?text=Andrew", department: "Technology", facebook: "https://www.facebook.com/boz" },
+        { id: 2, name: "ROEURM DARA", position: "Member", expertise: "Augmented reality and technology strategy", image: "./images/Roeurmdara.jpg", department: "Technology", facebook: "https://www.facebook.com/share/1FrJF4SbMJ/?mibextid=wwXIfr" },
         { id: 3, name: "PECH RATTANAKMONY", position: "Member", expertise: "Business operations and growth strategy", image: "https://via.placeholder.com/300x300?text=Sheryl", department: "Operations", facebook: "https://www.facebook.com/sheryl" },
         { id: 4, name: "MAI SOKLYNA", position: "Member", expertise: "Global operations and user engagement", image: "https://via.placeholder.com/300x300?text=Javier", department: "Operations", facebook: "https://www.facebook.com/" },
         { id: 5, name: "PHAT SONGMICHKEL", position: "Member", expertise: "Financial strategy and corporate governance", image: "https://via.placeholder.com/300x300?text=Susan", department: "Finance", facebook: "https://www.facebook.com/" },
@@ -125,7 +125,7 @@
             </div>
             <div class="flex items-center space-x-4">
               <a
-                href="./pratice.html"
+                href="./index.html"
                 data-readdy="true"
                 class="text-gray-700 hover:text-primary/80 px-3 py-2 rounded-md text-sm font-medium"
                 >Home</a
