--- a/math.html
+++ b/math.html
@@ -154,7 +154,7 @@
           </div>
           <div class="flex items-center space-x-4">
             <a
-              href="./pratice.html"
+              href="./index.html"
               data-readdy="true"
               class="text-gray-700 hover:text-primary/80 px-3 py-2 rounded-md text-sm font-medium"
               >Home</a
