--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Team - Meta</title>
+    <title>Our Team</title>
     <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.production.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
     <script src="https://cdn.tailwindcss.com/3.4.16"></script>
@@ -14,6 +14,40 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
+    <!-- Canonical URL -->
+  <link rel="canonical" href="./images/mathlogo.png">
+
+  <!-- Favicon -->
+  <link rel="icon" href="./images/fe-removebg-preview.png" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+  <!-- Open Graph Metadata (for Facebook, LinkedIn, etc.) -->
+  <meta property="og:title" content="Your Page Title">
+  <meta property="og:description" content="A short description for social sharing.">
+  <meta property="og:image" content="./images/mathlogo.png">
+  <meta property="og:url" content="./images/mathlogo.png">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Your Website Name">
+
+  <!-- Twitter Card Metadata -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Your Page Title">
+  <meta name="twitter:description" content="A short description for Twitter sharing.">
+  <meta name="twitter:image" content="./images/mathlogo.png">
+  <meta name="twitter:site" content="@YourTwitterHandle">
+
+  <!-- Robots (for SEO indexing control) -->
+  <meta name="robots" content="index, follow">
+
+  <!-- Optional: Language and Country targeting -->
+  <meta name="language" content="en">
+  <meta name="geo.region" content="US">
+  <meta name="geo.placename" content="New York">
+  <meta name="geo.position" content="40.7128;-74.0060">
+  <meta name="ICBM" content="40.7128, -74.0060">
     <script>
       tailwind.config = {
         theme: {
