--- a/math.html
+++ b/math.html
@@ -3,8 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Discrete Mathematics - Cryptography</title>
+    <title>Discrete Mathematics - Tools</title>
     <script src="https://cdn.tailwindcss.com/3.4.16"></script>
+    <!-- Canonical URL -->
+  <link rel="canonical" href="./images/mathlogo.png">
+
+  <!-- Favicon -->
+  <link rel="icon" href="./images/fe-removebg-preview.png" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+  <!-- Open Graph Metadata (for Facebook, LinkedIn, etc.) -->
+  <meta property="og:title" content="Your Page Title">
+  <meta property="og:description" content="A short description for social sharing.">
+  <meta property="og:image" content="./images/mathlogo.png">
+  <meta property="og:url" content="./images/mathlogo.png">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Your Website Name">
+
+  <!-- Twitter Card Metadata -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Your Page Title">
+  <meta name="twitter:description" content="A short description for Twitter sharing.">
+  <meta name="twitter:image" content="./images/mathlogo.png">
+  <meta name="twitter:site" content="@YourTwitterHandle">
+
+  <!-- Robots (for SEO indexing control) -->
+  <meta name="robots" content="index, follow">
+
+  <!-- Optional: Language and Country targeting -->
+  <meta name="language" content="en">
+  <meta name="geo.region" content="US">
+  <meta name="geo.placename" content="New York">
+  <meta name="geo.position" content="40.7128;-74.0060">
+  <meta name="ICBM" content="40.7128, -74.0060">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
