--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <link rel="manifest" href="/site.webmanifest">
 
   <!-- Open Graph Metadata (for Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="Your Page Title">
-  <meta property="og:description" content="A short description for social sharing.">
+  <meta property="og:title" content="Discrete Mathematical ">
+  <meta property="og:description" content="This is a website that create By Group of Y2 S2 Class M2 students For Final project in Math That Lead by Lecturer Lim Seyha ">
   <meta property="og:image" content="./images/mathlogo.png">
   <meta property="og:url" content="./images/mathlogo.png">
   <meta property="og:type" content="website">
